// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartDonutUtilization 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="230"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 230 230"
      width="230"
    >
      <g>
        <path
          d="M5.8170722959499274e-15,-95L5.2659812363336185e-15,-86Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M5.8170722959499274e-15,-95A95,95,0,1,1,-5.8170722959499274e-15,95A95,95,0,1,1,5.8170722959499274e-15,-95M6.058540038520991e-14,-86A86,86,0,1,0,-6.058540038520991e-14,86A86,86,0,1,0,6.058540038520991e-14,-86Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--first--Color, #f0f0f0); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="230"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 230 230"
        width="230"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartDonutUtilization 2`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="230"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 230 230"
      width="230"
    >
      <g>
        <path
          d="M5.8170722959499274e-15,-95L5.2659812363336185e-15,-86Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
        <path
          d="M5.8170722959499274e-15,-95A95,95,0,1,1,-5.8170722959499274e-15,95A95,95,0,1,1,5.8170722959499274e-15,-95M6.058540038520991e-14,-86A86,86,0,1,0,-6.058540038520991e-14,86A86,86,0,1,0,6.058540038520991e-14,-86Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--first--Color, #f0f0f0); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(115, 115)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="230"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 230 230"
        width="230"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="200"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 200 200"
      width="200"
    >
      <g>
        <path
          d="M0.9334130156923648,-79.99455444055012A80,80,0,0,1,65.26560040477878,46.26447237139683L57.983888959835994,40.97399932998254A71,71,0,0,0,0.9334130156923663,-70.99386410206263Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-theme--blue--ColorScale--100, #06c); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
        <path
          d="M64.16830759493514,47.77476635632862A80,80,0,1,1,-0.9334130156924101,-79.99455444055012L-0.9334130156923751,-70.99386410206263A71,71,0,1,0,56.88659614999237,42.48429331491432Z"
          role="presentation"
          shape-rendering="auto"
          style="fill: var(--pf-chart-donut--threshold--first--Color, #f0f0f0); padding: 8px; stroke: var(--pf-chart-pie--data--stroke--Color, transparent); stroke-width: 1;"
          transform="translate(100, 100)"
        />
      </g>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="200"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 200 200"
        width="200"
      />
    </div>
  </div>
</DocumentFragment>
`;
